<resources>
    <string name="app_name">My_Meteo_App</string>
    <string name="HttpURLConnection">HTTP con HttpURLConnection</string>
    <string name="OkHttp">HTTP con OkHttp</string>
    <string name="HttpYCertificados"><![CDATA[HTTP & Certificados]]></string>
    <string name="Eficiencia">Eficiencia</string>
    <string name="Consultar_Clima">Consultar clima</string>
    <string name="WeatherIcons">Iconos de tiempo</string>
    <string name="meteo_app">MEEEETEO APP!</string>
    <string name="resultado_aparecer_aqu">Resultado aparecerá aquí…</string>
    <string name="Back">Volver</string>
</resources>