<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HTTP URL Connection"
        android:textSize="24dp"
        android:layout_margin="20dp"

        />

    <Button
        android:id="@+id/btnConsultar_Clima_URL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Consultar_Clima"
        android:layout_margin="20dp"
        />

    <TextView
        android:id="@+id/txtResult"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:textSize="16sp"
        android:text="@string/resultado_aparecer_aqu" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/Back"/>


</LinearLayout>