<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="METEO APP!"
        android:textSize="24dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/HttpURLConnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HttpURLConnection"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <Button
        android:id="@+id/OkHttp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OkHttp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/HttpURLConnection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/HttpYCertificados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HttpYCertificados"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/OkHttp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/Eficiencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Eficiencia"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/HttpYCertificados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>